refactor(storage): replace keys.get(0) with keys.getFirst() for improved readability